--- a/tests/docs/smoke-all/typst/brand-yaml/typography/google2/brand-typography.qmd
+++ b/tests/docs/smoke-all/typst/brand-yaml/typography/google2/brand-typography.qmd
@@ -18,14 +18,9 @@ _quarto:
 
 ## heading-2 is `#context text.font`{=typst} `#context text.weight`{=typst} `#context text.style`{=typst} `#context text.size`{=typst}
 
-paragraph is `#context text.font`{=typst} `#context text.weight`{=typst} `#context text.style`{=typst} `#context text.size`{=typst}.
+paragraph is `#context text.font`{=typst} `#context text.weight`{=typst} `#context text.style`{=typst} `#context text.size`{=typst}, and here's an inline code block `{js} fib(90)` lorem ipsum dolor.
 
-```{=typst}
-#block(text(font: "Fira Code", weight: "black")[Some text with font set explicitly to #context text.font #context text.weight #context text.style #context text.size])
-
-```
-
-```
+```js
 const fib = num => num < 2 ? num : fib(num-1) + fib(num - 2);
 console.log(fib(12))
 ```
